--- a/package.json
+++ b/package.json
@@ -9,6 +9,7 @@
     "chart.js": "^3.9.1",
     "daisyui": "^2.51.5",
     "firebase": "^9.19.1",
+    "qrcode.react": "^4.2.0",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
     "react-icons": "^5.1.0",
